[package]
name = "scapegoat"
version = "2.3.0"
rust-version = "1.85"
authors = ["Tiemoko Ballo"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tnballo/scapegoat"
repository = "https://github.com/tnballo/scapegoat"
documentation = "https://docs.rs/scapegoat"
keywords = ["stack", "set", "map", "no_std", "fallible"]
categories = ["algorithms", "data-structures", "no-std", "embedded"]
description = "Safe, fallible, embedded-friendly ordered set/map via a scapegoat tree. Validated against BTreeSet/BTreeMap."
include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "build.rs",
    "README.md",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
branches = { version = "0.3.0", default-features = false, git = "https://github.com/fereidani/branches" }
const_panic = { version = "0.2.15", features = ["rust_1_88"] }
fixed = { version = "1.29.0", default-features = false }
smallnum = "^0.4"  # Has no dependencies of it's own

[dev-dependencies]
criterion = "0.7"
rand = { version = "0.9", features = ["small_rng"] }
lazy_static = "1"

[features]
alt_impl = []
low_mem_insert = []
fast_rebalance = []

[lib]
name = "scapegoat"
path = "src/lib.rs"

[[bench]]
name = "bench_set_rand"
harness = false

[[bench]]
name = "bench_set_seq"
harness = false

[[bench]]
name = "bench_set_from"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
